Prepare releasing v0.5.0 (#152)
* Prepare releasing 0.5.0

* update documentations